Fix sprite cropping on various links/buttons.

--- a/app/assets/stylesheets/base/layouts/_public.css.scss
+++ b/app/assets/stylesheets/base/layouts/_public.css.scss
@@ -243,7 +243,7 @@
     background: url(image_path('bz_icons.svg')) 0 -1988px;
 
     &:hover {
-      background: url(image_path('bz_icons.svg')) -58px -1989px;
+      background: url(image_path('bz_icons.svg')) -58px -1988px;
     }
   }
 
